# openfhe-genomic-examples

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  demo-chi2.cpp  demo-logistic.cpp
data/: betavalue.txt  chi2.txt  den.txt  num.txt  odds.txt  pvalue.txt  result.txt  zvalue.txt
